# draw-engine

./: meson.build  test_app.c
core/: app.c  app.h
display/: display.c  window-wayland.c  window-wayland.h
docs/: event-driven-framework.org  how-to-use-frame.org  liburing-cat.c  liburing-server.c  the-main-flow-of-wayland-client.org  wayland_protocol.org
platform/: display.c  display.h
platform/linux/: shm.c  shm.h  window-wayland.c  window-wayland.h  wl-test.c
utils/: utils.h
